--- a/TaxFree/TaxFree/en.lproj/Localizable.strings
+++ b/TaxFree/TaxFree/en.lproj/Localizable.strings
@@ -18,3 +18,45 @@
 "ukraine" = "Ukraine";
 "china" = "China";
 "bar_title_label" = "YOUR COUNTRY";
+"Армянских драмов" = "Armenian dram";
+"Австралийский доллар" = "Australian dollar";
+"Азербайджанский манат" = "Azerbaijani manat";
+"Болгарский лев" = "Bulgarian lev";
+"Бразильский реал" = "Brazilian real";
+"Белорусский рубль" = "Belarusian ruble";
+"Канадский доллар" = "Canadian dollar";
+"Швейцарский франк" = "Swedish krona";
+"Китайских юаней" = "Chinese yuan";
+"Чешских крон" = "Czech koruna";
+"Датских крон" = "Danish krone";
+"Евро" = "Euro";
+"Фунт стерлингов Соединенного королевства" = "British pound";
+"Гонконгских долларов" = "Hong Kong dollar";
+"Венгерских форинтов" = "Hungarian forint";
+"Индийских рупий" = "Indian rupee";
+"Японских иен" = "Japanese yen";
+"Киргизских сомов" = "Kyrgyzstani som";
+"Вон Республики Корея" = "Korean won";
+"Казахстанских тенге" = "Kazakhstani tenge";
+"Норвежских крон" = "Norwegian krone";
+"Польский злотый" = "Polish zloty";
+"Румынский лей" = "Romanian leu";
+"Шведских крон" = "Swedish krona";
+"Сингапурский доллар" = "Singapore dollar";
+"Таджикских сомони" = "Tajikistani somoni";
+"Новый туркменский манат" = "Turkmenistan manat";
+"Турецкая лира" = "Turkish lira";
+"Украинских гривен" = "Ukrainian hryvnia";
+"Доллар США" = "US Dollar";
+"Узбекских сумов" = "Uzbekistani som";
+"СДР (специальные права заимствования)" = "Special Drawing Rights";
+"Южноафриканских рэндов" = "South African rand";
+"top_item_text" = "CURRENCY";
+"result_text_label" = "Result:";
+"money_amount_text" = "money amount";
+"toast_title_text_add" = "Done!";
+"toast_message_text_add" = "Successfully added to favourites!";
+"calk_text" = "CALCULATOR";
+"fav_top_item_text" = "Favourites";
+
+
