--- a/TaxFree/TaxFree/ru.lproj/Localizable.strings
+++ b/TaxFree/TaxFree/ru.lproj/Localizable.strings
@@ -18,3 +18,44 @@
 "ukraine" = "Украина";
 "china" = "Китай";
 "bar_title_label" = "ВАША СТРАНА";
+"Армянских драмов" = "Армянских драмов";
+"Австралийский доллар" = "Австралийский доллар";
+"Азербайджанский манат" = "Азербайджанский манат";
+"Болгарский лев" = "Болгарский лев";
+"Бразильский реал" = "Бразильский реал";
+"Белорусский рубль" = "Белорусский рубль";
+"Канадский доллар" = "Канадский доллар";
+"Швейцарский франк" = "Швейцарский франк";
+"Китайских юаней" = "Китайских юаней";
+"Чешских крон" = "Чешских крон";
+"Датских крон" = "Датских крон";
+"Евро" = "Евро";
+"Фунт стерлингов Соединенного королевства" = "Фунт стерлингов Соединенного королевства";
+"Гонконгских долларов" = "Гонконгских долларов";
+"Венгерских форинтов" = "Венгерских форинтов";
+"Индийских рупий" = "Индийских рупий";
+"Японских иен" = "Японских иен";
+"Киргизских сомов" = "Киргизских сомов";
+"Вон Республики Корея" = "Вон Республики Корея";
+"Казахстанских тенге" = "Казахстанских тенге";
+"Норвежских крон" = "Норвежских крон";
+"Польский злотый" = "Польский злотый";
+"Румынский лей" = "Румынский лей";
+"Шведских крон" = "Шведских крон";
+"Сингапурский доллар" = "Сингапурский доллар";
+"Таджикских сомони" = "Таджикских сомони";
+"Новый туркменский манат" = "Новый туркменский манат";
+"Турецкая лира" = "Турецкая лира";
+"Украинских гривен" = "Украинских гривен";
+"Доллар США" = "Доллар США";
+"Узбекских сумов" = "Узбекских сумов";
+"СДР (специальные права заимствования)" = "СДР (специальные права заимствования)";
+"Южноафриканских рэндов" = "Южноафриканских рэндов";
+"top_item_text" = "Валюты";
+"result_text_label" = "Результат:";
+"money_amount_text" = "количество";
+"toast_title_text_add" = "Готово!";
+"toast_message_text_add" = "Успешно добавлено в избранное!";
+"calk_text" = "Калькулятор";
+"fav_top_item_text" = "Избранное";
+
