--- a/TaxFree/TaxFree/en.lproj/Localizable.strings
+++ b/TaxFree/TaxFree/en.lproj/Localizable.strings
@@ -58,5 +58,6 @@
 "toast_message_text_add" = "Successfully added to favourites!";
 "calk_text" = "CALCULATOR";
 "fav_top_item_text" = "Favourites";
+"upcomming_text_button" = "Great functional will be here.";
 
 
