--- a/TaxFree/TaxFree/ru.lproj/Localizable.strings
+++ b/TaxFree/TaxFree/ru.lproj/Localizable.strings
@@ -58,4 +58,4 @@
 "toast_message_text_add" = "Успешно добавлено в избранное!";
 "calk_text" = "Калькулятор";
 "fav_top_item_text" = "Избранное";
-
+"upcomming_text_button" = "Тут скоро будет еще лучше.";
