--- a/TaxFree/TaxFree/en.lproj/Localizable.strings
+++ b/TaxFree/TaxFree/en.lproj/Localizable.strings
@@ -59,5 +59,5 @@
 "calk_text" = "CALCULATOR";
 "fav_top_item_text" = "Favourites";
 "upcomming_text_button" = "Great functional will be here.";
-
-
+"always_added_title" = "This currency has already added. You can find it in your favoutites currencies.";
+"always_added_message" = "Opps!";
