- changed some colours - added minor fixes

--- a/TaxFree/TaxFree/ru.lproj/Localizable.strings
+++ b/TaxFree/TaxFree/ru.lproj/Localizable.strings
@@ -59,3 +59,7 @@
 "calk_text" = "Калькулятор";
 "fav_top_item_text" = "Избранное";
 "upcomming_text_button" = "Тут скоро будет еще лучше.";
+"always_added_title" = "Валюта уже добавлена в избранное. Вы можете найти ее во вкладке 'Избранное'";
+"always_added_message" = "Упсс..!";
+"empty_title_text" = "Хм...";
+"empty_title_msg" = "Вы еще не добавляли валют в Избранное. Вы можете это сделать из вкладки расчета.";
