--- a/TaxFree/TaxFree/ru.lproj/Localizable.strings
+++ b/TaxFree/TaxFree/ru.lproj/Localizable.strings
@@ -63,3 +63,5 @@
 "always_added_message" = "Упсс..!";
 "empty_title_text" = "Хм...";
 "empty_title_msg" = "Вы еще не добавляли валют в Избранное. Вы можете это сделать из вкладки расчета.";
+"sorry_ruble_msg" = "Извините!";
+"sorry_rub_title" = "Данная функция пока что не работает для выбранной валюты!";
